--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         height: 100%;
       }
     </style>
-    <script defer src="/js/hello.js"></script>
+    <script defer src="/js/game.js"></script>
     <script>
       if (window.location.hostname === "localhost") {
         const es = new EventSource("/reload-events");
